# etl.prototype

./: .gitignore  Makefile  README.md  mypi.ini  pyproject.toml  requirements.dev.txt  requirements.txt
app/_config/: settings.py  urls.py
app/ce_core/: apps.py  models.py
app/ce_etl/: apps.py
app/ce_plugin/: apps.py
app/ce_powerbi/: apps.py
app/ce_powerbi_v02/: apps.py
app/ce_warehouse/: apps.py
app/shared/: services.py
schema/ce_core/: date.sql  period.sql  s_sys_flags.sql  schema.sql  source.sql  v_date.sql  v_period.sql
schema/ce_etl/: README.md  schema.sql
schema/ce_etl/functions/: fx_tb_api_ud_dx.sql  fx_tb_calc_tokens.sql  fx_tb_groups.sql  fx_tb_help.sql  fx_tb_seq_check.sql  fx_tb_table_cols.sql  fx_tg_c_series_audit.sql  fx_tg_x_value_audit.sql  fx_ut_date_to_dti.sql  fx_ut_date_to_pdi.sql  fx_ut_ifreq_multi.sql  fx_ut_ifreq_single.sql  fx_ut_trim.sql
schema/ce_etl/procedures/: px_ut_fix_seq.sql  px_ut_info.sql  px_ut_lock_pipeline.sql
schema/ce_etl/tables/: a_c_series.sql  a_x_value.sql  c_api_calc.sql  c_calc.sql  c_com.sql  c_const.sql  c_geo.sql  c_ind.sql  c_series.sql  c_series_meta.sql  l_com_type.sql  l_data_transformation.sql  l_date.sql  l_freq.sql  l_geo_catg.sql  l_geo_group.sql  l_period.sql  l_political_alignment.sql  l_source.sql  l_type.sql  s_pipeline_lock.sql  s_pipeline_locks.sql  s_sys_flags.sql  u_tooltip.sql  u_value.sql  x_series_value.sql  x_tooltip.sql  x_value.sql
schema/ce_etl/triggers/: tg_c_series_audit.sql  tg_x_value_audit.sql
schema/ce_etl/views/: mv_date.sql  mv_period.sql  mv_tgt_period.sql  mv_xperiod.sql  mv_xvalue.sql  v_date.sql
schema/ce_plugin/: README.md  schema.sql
schema/ce_powerbi/: README.md  schema.sql
schema/ce_powerbi_v02/: README.md  schema.sql
schema/ce_warehouse/: README.md  schema.sql  utc.sql
scripts/: dblinkCtl.sql  dblinkEtl.sql  dblinkWarehouse.sql  dump.sh  migrate.py  migrateWarehouse.py  restore.sh  setup.sh  sqlcat.py  sqlorder.py  tidyPip.sh
scripts/obs/: dblinkWarehouse.sql
utils/: README.md
(+376 files in other folders)
