# @file
# pyproject.toml
#
# This file is used to configure the Python project, including dependencies, formatting, linting, and testing etc.
# Note, cloned from PowerBi backend app, but adapted for Django prototype
#

[project]
name = "Protype App"
version = "1.0.0"
description = "Local prototype Django project."
authors = [{name = "Gary Pigott", email = "gary.pigott@capitaleconomics.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

# Black, not currently used, but can be enabled later
[tool.black]
line-length = 100
target-version = ["py311"]
skip-string-normalization = true  # disables forcing double quotes

# Ruff configuration
[tool.ruff]
preview = true
line-length = 100
target-version = "py311"
lint.extend-select = [
    "I",   # isort
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "E",   # pycodestyle (errors)
]
lint.ignore = [
#    "B017",  # flake8-bugbear: avoid using `assert` in tests
    "I001",  # isort: skip
#    "E501"  # line too long (handled by ruff)
]
lint.isort.force-sort-within-sections = false
format.quote-style = "single"

exclude = ["scripts/obs/*"]  # Exclude anything in scripts/obs

[tool.django-stubs]
django_settings_module = "app._config.settings"

# Coverage configuration
[tool.coverage.run]
source = ["app", "function_app.py"]
omit = [
    "*/__init__.py",
    "tests/*"
]

[tool.coverage.report]
show_missing = true
skip_covered = false

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]

python_files = "test_*.py"

python_classes = "Test*"

python_functions = "test_*"

markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "vers(x): marks test file with a specific version (e.g., @pytest.mark.vers('1.0'))"
]

filterwarnings = [
    "ignore:.*pkg_resources is deprecated as an API.",
    "ignore:.*Deprecated call to `pkg_resources.declare_namespace"
]
